| Summary: | ASTERISK-25100: asterisk coredump if host has an IPv6 address that end with ::80 | ||
| Reporter: | Mark Petersen (asterisk.org@zombie.dk) | Labels: | |
| Date Opened: | 2015-05-19 03:53:49 | Date Closed: | 2015-06-16 10:52:32 |
| Priority: | Critical | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_sip/IPv6 |
| Versions: | 11.17.1 13.3.2 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | CentOS release 6.6 (Final) 64bit | Attachments: | ( 0) asterisk_bt_full.txt ( 1) asterisk_thread_apply_all_bt.txt ( 2) sip.conf |
| Description: | if you have a host in sip.conf the end with ::80 asterisk will crash on reload and it will also not start with that address, as soon as you change it to something else, asterisk work as expected
Program received signal SIGSEGV, Segmentation fault. 0x000000000045f96c in hash_ao2_iterator_next (self=0x21babe8, node=0x100000001, flags=0) at astobj2_hash.c:694 694 if (node->common.obj) { | ||
| Comments: | By: Mark Petersen (asterisk.org@zombie.dk) 2015-05-19 03:55:31.062-0500 gdb backtrace By: Ivan Poddubny (ipoddubny) 2015-05-24 14:28:32.036-0500 I don't think that the bug can be triggered remotely since it requires to create peers in sip or iax configuration, and dynamic peers usually require authentication. The patch has been posted for review on gerrit: https://gerrit.asterisk.org/#/c/530/ | ||