Astobj2: Correctly treat hash_fn returning INT_MIN

The code in astobj2_hash.c wrongly assumed that abs(int) is always > 0.
However, abs(INT_MIN) = INT_MIN and is still negative, as well as
abs(INT_MIN) % num_buckets, and as a result this led to a crash.

One way to trigger the bug is using host=::80 or 0.0.0.128 in peer
configuration section in chan_sip or chan_iax.

This patch replaces usage of abs with casting to unsigned int for
calculating bucket number.

ASTERISK-25100 #close

Change-Id: Id6981400ad526f47e10bcf7b847b62bd2785e899